# EE353_gazebo

./: .clang-format  CMakeLists.txt  README.md  env_setup.sh
example/: hello_world.cpp
example/animated_box/: animated_box.cpp  integrated_main.cpp
example/velodyne_plugin/: velodyne_plugin_vel.cpp
model/abstract/: model.sdf
model/debug/: model.config  model.sdf
model/omni_wheel scaled/: model.config  model.sdf
model/robot_1/: model.config  model.sdf
model/robot_2/: model.config  model.sdf
model/robot_model_1/: model.config
model/robot_model_2/: model.config  model.sdf
model/robot_model_3/: model.config  model.sdf
model/robot_model_4/: model.config  model.sdf
model/tutorial_bot/: model.config  model.sdf
src/: model_push.cpp  robot_drive.cpp  system_gui.cpp  world_edit.cpp  world_init.cpp
src/animated_box/: independent_listener.cpp
src/velodyne_plugin/: velodyne_plugin.cpp
world/: project.world
world/velodyne_plugin/: velodyne.world
